@startuml
namespace ScriptableObjects{
class Timer {
    + StartTime : int <<get>>
    + Time : float <<get>>
    + IsTimeOver : bool <<get>>
    OnEnable() : void
    + Update() : void
    + Reset() : void
}
ScriptableObject <|-- Timer
Timer --> "gameSetting" GameSetting
class GameSetting {
    Name : string
    + GaolSize : float
    + Time : int
}
ScriptableObject <|-- GameSetting
class EatableObjSO {
    + Name : string
    + InitSize : float
    + isPlayer : bool = false
    + Size : float <<get>> <<set>>
    + Init() : void
}
ScriptableObject <|-- EatableObjSO
EatableObjSO --> "m_Sprite" Sprite
note top of Timer : 時間を減らす
note top of EatableObjSO : ”食べられるもの” のステータス
note right of GameSetting : ステージの設定
}
@enduml
